web/kiri/index.css
/* ... */
.set-pop {
    top: 50%;
    left: calc(100% + 6px);
    position: absolute;
    white-space: nowrap;
    flex-direction: column;
    transform: translateY(-50%);
    background-color: #fff;
    border: 1px solid #aaa;
    border-radius: 5px;
    margin-right: 5px;
    padding: 5px;
}
.settings .ext-buttons {
    margin: 0 4px 0 4px;
    gap: 3px;
}
#layers .var-row {
    border-radius: 10px;
    background-color: #ddd;
    padding: 2px 5px 2px 5px;
    margin: 0 2px 3px 2px;
}
#layers button {
    margin-left: 4px;
    margin-top: 0;
    margin-bottom: 3px;
    padding-left: 9px;
    padding-right: 9px;
    border-radius: 10px;
    font-weight: bold;
    background-color: var(--highlight);
}
#layers button:hover {
    background-color: var(--main-color);
}
.var-row {
    white-space: nowrap;
    align-items: center;
    gap: 4px;
}
.var-row label {
    padding: 2px 4px 2px 0;
    flex-grow: 1;
    font-size: smaller;
    text-align: left;
}
.var-row .dim {
    text-align: right;
    font-size: smaller;
    align-self: center;
    justify-self: center;
}
.var-row input {
    /* flex: 1 1 auto;   */
    min-width: 0;
    max-width: 7ch;
    margin-right: 0;
    margin-bottom: 1px;
    padding-bottom: 1px;
    padding-top: 1px;
}
.var-row #tool-name {
    max-width: 15ch;
}
.var-row button {
    margin-right: 0;
    margin-bottom: 1px;
}
.table-row {
    flex-direction: row;
    align-items: stretch;
}
.nounderline a {
    text-decoration: none !important;
    line-height: 2em;
}
.nounderline svg {
    width: 30px !important;
}
.mono {
    font-family: monospace;
}

#fs-edit {
    text-transform: none;
    padding: 1px 3px 1px 3px;
    margin: 0 3px 0 0 !important;
}
#gdpr {
    position: absolute;
    display: none;
    bottom: 10px;
    right: 10px;
    z-index: 1000;
    padding: 20px;
    border-radius: 5px;
    border: 1px solid black;
    background-color: white;
}
#gdpr a {
    text-decoration: underline;
}
#gotit {
    font-weight: bold;
    font-size: larger;
    padding: 5px 20px 5px 20px;
    margin-left: 10px;
}
#stats {
    position: fixed;
    font-size: 10px;
    bottom: 5px;
    right: 5px;
    color: #000;
    flex-direction: column;
    align-items: flex-end;
}
#stats hr {
    width: 100%;
}
#stats:hover #rnfo {
    display: grid;
}
#rnfo {
    display: none;
    grid-template-columns: min-content 1fr;
    position: absolute;
    bottom: 100%;
    gap: 3px;
    right: 0;
    background-color: rgba(255,255,255,0.05);
    border: 1px solid black;
    border-radius: 3px;
    padding: 5px;
}
#rnfo label {
    text-align: right;
}
#context-menu {
    display: none;
    position: absolute;
    flex-direction: column;
    padding: 4px 1px 4px 1px;
    border: 1px solid #bbb;
    border-radius: 3px;
    background-color: rgba(255,255,255,0.85);
}
#context-menu button {
    margin: 0;
    padding: 10px;
    border-radius: 0;
    border: 1px solid rgba(255,255,255,0);
    background-color: rgba(255,255,255,0);
}
#context-menu button:hover {
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    background-color: #eee;
    color: black;
}
#context-menu .sep {
    border-top: 1px solid #ddd;
    margin: 5px 0 5px 0;
}

.range-info {
    position: relative;
}
.range-info:hover .range-detail {
    display: flex;
}
.range-detail {
    position: absolute;
    display: none;
    flex-direction: column;
    bottom: 50%;
    right: 100%;
    padding: 5px;
    margin: 0 10px 0 10px;
    font-size: smaller;
    font-family: monospace;
    transform: translateY(50%);
    background-color: rgba(255,255,255,0.8);
    border: 1px solid #aaa;
    border-radius: 5px;
}
.range-detail label.pad {
    padding-right: 8px;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}
.range-detail label.val {
    font-weight: bold;
}
.range-detail span {
    flex-grow: 1;
}

.devel #modal-box {
    height: 80%;
}
.devel #mod-x-any {
    height: 100%;
}
.devel #code-preview {
    flex-grow: 1;
}
.devel #code-preview > div,
.devel #code-preview-textarea {
    height: 100%;
}

